fix gaps dream card container

--- a/frontend/src/components/DreamsContainer/DreamsContainer.scss
+++ b/frontend/src/components/DreamsContainer/DreamsContainer.scss
@@ -4,7 +4,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: $space_xxl;
+  gap: $space_xl;
   padding-bottom: $space_l;
 }
 
