--- a/frontend/src/styles/main.scss
+++ b/frontend/src/styles/main.scss
@@ -26,20 +26,20 @@
   @include onTablet {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    row-gap: 6rem;
+    row-gap: 2rem;
     column-gap: 2rem;
   }
 
   @include onLaptop {
     grid-template-columns: repeat(3, 1fr);
-    row-gap: 6rem;
+    row-gap: 2rem;
     column-gap: 2rem;
   }
 
   @include onDesktop {
     width: 100%;
     grid-template-columns: repeat(4, 1fr);
-    row-gap: 6rem;
+    row-gap: 4rem;
     column-gap: 2rem;
   }
 }
